@startuml OshiGadge

entity users {
  *id [PK]
  --
  name
  introduction
  email
  password
  encrypted_password

}

entity gadgets {
  *id [PK]
  --
  user_id [FK]
  name
  start_date
  category
  reason
  point
  usage
}

entity likes {
  *id [PK]
  --
  user_id [FK]
  gadget_id [FK]
}

entity comments {
  *id [PK]
  --
  user_id [FK]
  gadget_id [FK]
  content
}

entity relationships {
  *id [PK]
  --
  follower_id [FK]
  followed_id [FK]
}

users ||--o{ gadgets
users ||--o{ comments
users ||--o{ likes
users ||-r-o{ relationships
users ||-r-o{ relationships
gadgets ||-r-o{ comments
gadgets ||-l-o{ likes

@enduml
